-update from TP480

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1994,11 +1994,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-<<<<<<< HEAD
-  background: #b0ffb4;
-=======
-  background: #ffff61;
->>>>>>> 825917793d259b8e6e9a759a4100396615ca77bb
+  background: #d046e4;
 }
 .links-of-blogroll {
   font-size: 13px;
