-fix issue from TP480

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1994,7 +1994,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #d046e4;
+  background: #8f6ac9;
 }
 .links-of-blogroll {
   font-size: 13px;
