--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1994,7 +1994,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffffeb;
+  background: #f70d32;
 }
 .links-of-blogroll {
   font-size: 13px;
